import java.util.ArrayList;

public class TransRow {
    ArrayList<Transition> transitions;
    public TransRow() {
    	transitions = new ArrayList<Transition> ();
    }
}
